# rsmatrix

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
docs/: design-notes.md  implementation-plan.md  requirements.md
macos/: MatrixRenderer.swift  MetalRenderer.swift  MetalSceneController.swift  RenderConfig.swift  Shaders.metal  SimulationController.swift
macos/app/: Info.plist  MatrixView.swift  Shaders.metal  main.swift
macos/saver/: MatrixSaverView.swift
rsmatrix-cli/: Cargo.toml
rsmatrix-cli/src/: main.rs  screen.rs  stream.rs
rsmatrix-core/: Cargo.toml
rsmatrix-core/src/: charset.rs  ffi.rs  lib.rs  simulation.rs  tests.rs  types.rs
rsmatrix-ffi/: Cargo.toml
rsmatrix-ffi/src/: lib.rs
rsmatrix-gtk/: Cargo.toml
rsmatrix-gtk/src/: main.rs  renderer.rs
screensaver/: project.yml
screensaver/MatrixSaver/: Info.plist  rsmatrix-core-Bridging.h
screensavers/linux/: Cargo.toml
screensavers/linux/src/: main.rs
screensavers/macos/: project.yml
screensavers/macos/MatrixSaver/: MatrixRenderer.swift  MatrixSaverView.swift  rsmatrix-ffi-Bridging.h
screensavers/windows/: Cargo.toml
screensavers/windows/src/: main.rs
src/: charset.rs  column.rs  types.rs
