[workspace]
members = [
    "rsmatrix-core",
    "rsmatrix-ffi",
    "rsmatrix-cli",
]
resolver = "2"

[workspace.dependencies]
rsmatrix-core = { path = "rsmatrix-core" }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
signal-hook = "0.3"

[profile.release]
opt-level = 3
strip = true
lto = true
