[workspace]
members = [
    "rsmatrix-core",
    "rsmatrix-ffi",
    "rsmatrix-cli",
]
resolver = "2"

[workspace.dependencies]
rsmatrix-core = { path = "rsmatrix-core" }
rand = "0.10"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
signal-hook = "0.4"

[profile.release]
opt-level = 3
strip = true
lto = true
