[package]
name = "rsmatrix-cli"
version = "1.0.0"
edition = "2021"
description = "Matrix digital rain terminal effect"

[[bin]]
name = "rsmatrix"
path = "src/main.rs"

[dependencies]
rsmatrix-core = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
signal-hook = { workspace = true }
